--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     dependencies {
-        classpath 'com.github.skhatri:gradle-appthwack-plugin:1.0.0'
+        classpath 'com.github.skhatri:gradle-appthwack:1.0.0'
         classpath 'org.apache.httpcomponents:httpclient:4.3.4'
         classpath 'org.apache.httpcomponents:httpcore-nio:4.3.2'
         classpath 'org.apache.httpcomponents:httpmime:4.3.4'
