--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-core:2.4.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.4.1'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.1'
+    compile 'joda-time:joda-time:2.3'
 }
 
 repositories {
