--- a/example/gradle.properties
+++ b/example/gradle.properties
@@ -9,11 +9,11 @@ pool.id=300643
 
 
 ipa.name=mBanking.ipa
-ipa.file=/usr/home/sources/ios/xcodeci/xcodeci/xcodeci-cal.ipa
-ipa.id=-1
+ipa.file=/usr/home/sources/mobile/xcodeci/xcodeci/build/xcodeci-cal.ipa
+ipa.id=
 
 test.name=features.zip
-test.file=/usr/home/sources/ios/xcodeci/xcodeci/xcodeci-tests.zip
-test.id=-1
+test.file=/usr/home/sources/mobile/xcodeci/xcodeci/xcodeci-tests.zip
+test.id=
 
 
