sample project name added

--- a/example/gradle.properties
+++ b/example/gradle.properties
@@ -8,7 +8,7 @@ pool.id=300643
 
 
 
-ipa.name=mBanking.ipa
+ipa.name=xcodeci-cal.ipa
 ipa.file=/usr/home/sources/mobile/xcodeci/xcodeci/build/xcodeci-cal.ipa
 ipa.id=
 
